// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@mqs/react-server-components components <InputRating /> renders 1`] = `
<DocumentFragment>
  <div
    class="rating rating-md test"
    data-testid="InputRating"
  >
    <input
      class="mask rating-hidden bg-primary mask-star"
      name="test-rating"
      type="radio"
    />
    <input
      class="mask bg-primary mask-star"
      name="test-rating"
      type="radio"
    />
    <input
      class="mask bg-primary mask-star"
      name="test-rating"
      type="radio"
    />
    <input
      class="mask bg-primary mask-star"
      name="test-rating"
      type="radio"
    />
    <input
      class="mask bg-primary mask-star"
      name="test-rating"
      type="radio"
    />
    <input
      class="mask bg-primary mask-star"
      name="test-rating"
      type="radio"
    />
  </div>
</DocumentFragment>
`;

exports[`@mqs/react-server-components components <InputRating /> renders halves 1`] = `
<DocumentFragment>
  <div
    class="rating rating-half rating-md test"
    data-testid="InputRating"
  >
    <input
      class="mask rating-hidden bg-primary mask-star"
      name="test-rating"
      type="radio"
    />
    <input
      class="mask mask-half-1 bg-primary mask-star"
      name="test-rating"
      type="radio"
    />
    <input
      class="mask mask-half-2 bg-primary mask-star"
      name="test-rating"
      type="radio"
    />
    <input
      class="mask mask-half-1 bg-primary mask-star"
      name="test-rating"
      type="radio"
    />
    <input
      class="mask mask-half-2 bg-primary mask-star"
      name="test-rating"
      type="radio"
    />
    <input
      class="mask mask-half-1 bg-primary mask-star"
      name="test-rating"
      type="radio"
    />
    <input
      class="mask mask-half-2 bg-primary mask-star"
      name="test-rating"
      type="radio"
    />
    <input
      class="mask mask-half-1 bg-primary mask-star"
      name="test-rating"
      type="radio"
    />
    <input
      class="mask mask-half-2 bg-primary mask-star"
      name="test-rating"
      type="radio"
    />
    <input
      class="mask mask-half-1 bg-primary mask-star"
      name="test-rating"
      type="radio"
    />
    <input
      class="mask mask-half-2 bg-primary mask-star"
      name="test-rating"
      type="radio"
    />
  </div>
</DocumentFragment>
`;

exports[`Storyshots @mqs/react-server-components/components/Input/InputRating Input Rating Color Example 1`] = `
[
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        accent
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-accent mask-star"
        name="InputRatingColorExample-accent"
        type="radio"
      />
      <input
        className="mask bg-accent mask-star"
        name="InputRatingColorExample-accent"
        type="radio"
      />
      <input
        className="mask bg-accent mask-star"
        name="InputRatingColorExample-accent"
        type="radio"
      />
      <input
        className="mask bg-accent mask-star"
        name="InputRatingColorExample-accent"
        type="radio"
      />
      <input
        className="mask bg-accent mask-star"
        name="InputRatingColorExample-accent"
        type="radio"
      />
      <input
        className="mask bg-accent mask-star"
        name="InputRatingColorExample-accent"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        error
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-error mask-star"
        name="InputRatingColorExample-error"
        type="radio"
      />
      <input
        className="mask bg-error mask-star"
        name="InputRatingColorExample-error"
        type="radio"
      />
      <input
        className="mask bg-error mask-star"
        name="InputRatingColorExample-error"
        type="radio"
      />
      <input
        className="mask bg-error mask-star"
        name="InputRatingColorExample-error"
        type="radio"
      />
      <input
        className="mask bg-error mask-star"
        name="InputRatingColorExample-error"
        type="radio"
      />
      <input
        className="mask bg-error mask-star"
        name="InputRatingColorExample-error"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        info
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-info mask-star"
        name="InputRatingColorExample-info"
        type="radio"
      />
      <input
        className="mask bg-info mask-star"
        name="InputRatingColorExample-info"
        type="radio"
      />
      <input
        className="mask bg-info mask-star"
        name="InputRatingColorExample-info"
        type="radio"
      />
      <input
        className="mask bg-info mask-star"
        name="InputRatingColorExample-info"
        type="radio"
      />
      <input
        className="mask bg-info mask-star"
        name="InputRatingColorExample-info"
        type="radio"
      />
      <input
        className="mask bg-info mask-star"
        name="InputRatingColorExample-info"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        primary
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-primary mask-star"
        name="InputRatingColorExample-primary"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingColorExample-primary"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingColorExample-primary"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingColorExample-primary"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingColorExample-primary"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingColorExample-primary"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        secondary
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-secondary mask-star"
        name="InputRatingColorExample-secondary"
        type="radio"
      />
      <input
        className="mask bg-secondary mask-star"
        name="InputRatingColorExample-secondary"
        type="radio"
      />
      <input
        className="mask bg-secondary mask-star"
        name="InputRatingColorExample-secondary"
        type="radio"
      />
      <input
        className="mask bg-secondary mask-star"
        name="InputRatingColorExample-secondary"
        type="radio"
      />
      <input
        className="mask bg-secondary mask-star"
        name="InputRatingColorExample-secondary"
        type="radio"
      />
      <input
        className="mask bg-secondary mask-star"
        name="InputRatingColorExample-secondary"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        success
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-success mask-star"
        name="InputRatingColorExample-success"
        type="radio"
      />
      <input
        className="mask bg-success mask-star"
        name="InputRatingColorExample-success"
        type="radio"
      />
      <input
        className="mask bg-success mask-star"
        name="InputRatingColorExample-success"
        type="radio"
      />
      <input
        className="mask bg-success mask-star"
        name="InputRatingColorExample-success"
        type="radio"
      />
      <input
        className="mask bg-success mask-star"
        name="InputRatingColorExample-success"
        type="radio"
      />
      <input
        className="mask bg-success mask-star"
        name="InputRatingColorExample-success"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        warning
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-warning mask-star"
        name="InputRatingColorExample-warning"
        type="radio"
      />
      <input
        className="mask bg-warning mask-star"
        name="InputRatingColorExample-warning"
        type="radio"
      />
      <input
        className="mask bg-warning mask-star"
        name="InputRatingColorExample-warning"
        type="radio"
      />
      <input
        className="mask bg-warning mask-star"
        name="InputRatingColorExample-warning"
        type="radio"
      />
      <input
        className="mask bg-warning mask-star"
        name="InputRatingColorExample-warning"
        type="radio"
      />
      <input
        className="mask bg-warning mask-star"
        name="InputRatingColorExample-warning"
        type="radio"
      />
    </div>
  </div>,
]
`;

exports[`Storyshots @mqs/react-server-components/components/Input/InputRating Input Rating Example 1`] = `
<div
  className="rating rating-md"
  data-testid="InputRating"
>
  <input
    className="mask rating-hidden bg-primary mask-star"
    name="InputRatingExample"
    type="radio"
  />
  <input
    className="mask bg-primary mask-star"
    name="InputRatingExample"
    type="radio"
  />
  <input
    className="mask bg-primary mask-star"
    name="InputRatingExample"
    type="radio"
  />
  <input
    className="mask bg-primary mask-star"
    name="InputRatingExample"
    type="radio"
  />
  <input
    className="mask bg-primary mask-star"
    name="InputRatingExample"
    type="radio"
  />
  <input
    className="mask bg-primary mask-star"
    name="InputRatingExample"
    type="radio"
  />
</div>
`;

exports[`Storyshots @mqs/react-server-components/components/Input/InputRating Input Rating Mask Example 1`] = `
[
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        circle
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-primary mask-circle"
        name="InputRatingMaskExample-circle"
        type="radio"
      />
      <input
        className="mask bg-primary mask-circle"
        name="InputRatingMaskExample-circle"
        type="radio"
      />
      <input
        className="mask bg-primary mask-circle"
        name="InputRatingMaskExample-circle"
        type="radio"
      />
      <input
        className="mask bg-primary mask-circle"
        name="InputRatingMaskExample-circle"
        type="radio"
      />
      <input
        className="mask bg-primary mask-circle"
        name="InputRatingMaskExample-circle"
        type="radio"
      />
      <input
        className="mask bg-primary mask-circle"
        name="InputRatingMaskExample-circle"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        decagon
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-primary mask-decagon"
        name="InputRatingMaskExample-decagon"
        type="radio"
      />
      <input
        className="mask bg-primary mask-decagon"
        name="InputRatingMaskExample-decagon"
        type="radio"
      />
      <input
        className="mask bg-primary mask-decagon"
        name="InputRatingMaskExample-decagon"
        type="radio"
      />
      <input
        className="mask bg-primary mask-decagon"
        name="InputRatingMaskExample-decagon"
        type="radio"
      />
      <input
        className="mask bg-primary mask-decagon"
        name="InputRatingMaskExample-decagon"
        type="radio"
      />
      <input
        className="mask bg-primary mask-decagon"
        name="InputRatingMaskExample-decagon"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        diamond
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-primary mask-diamond"
        name="InputRatingMaskExample-diamond"
        type="radio"
      />
      <input
        className="mask bg-primary mask-diamond"
        name="InputRatingMaskExample-diamond"
        type="radio"
      />
      <input
        className="mask bg-primary mask-diamond"
        name="InputRatingMaskExample-diamond"
        type="radio"
      />
      <input
        className="mask bg-primary mask-diamond"
        name="InputRatingMaskExample-diamond"
        type="radio"
      />
      <input
        className="mask bg-primary mask-diamond"
        name="InputRatingMaskExample-diamond"
        type="radio"
      />
      <input
        className="mask bg-primary mask-diamond"
        name="InputRatingMaskExample-diamond"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        heart
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-primary mask-heart"
        name="InputRatingMaskExample-heart"
        type="radio"
      />
      <input
        className="mask bg-primary mask-heart"
        name="InputRatingMaskExample-heart"
        type="radio"
      />
      <input
        className="mask bg-primary mask-heart"
        name="InputRatingMaskExample-heart"
        type="radio"
      />
      <input
        className="mask bg-primary mask-heart"
        name="InputRatingMaskExample-heart"
        type="radio"
      />
      <input
        className="mask bg-primary mask-heart"
        name="InputRatingMaskExample-heart"
        type="radio"
      />
      <input
        className="mask bg-primary mask-heart"
        name="InputRatingMaskExample-heart"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        hexagon
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-primary mask-hexagon"
        name="InputRatingMaskExample-hexagon"
        type="radio"
      />
      <input
        className="mask bg-primary mask-hexagon"
        name="InputRatingMaskExample-hexagon"
        type="radio"
      />
      <input
        className="mask bg-primary mask-hexagon"
        name="InputRatingMaskExample-hexagon"
        type="radio"
      />
      <input
        className="mask bg-primary mask-hexagon"
        name="InputRatingMaskExample-hexagon"
        type="radio"
      />
      <input
        className="mask bg-primary mask-hexagon"
        name="InputRatingMaskExample-hexagon"
        type="radio"
      />
      <input
        className="mask bg-primary mask-hexagon"
        name="InputRatingMaskExample-hexagon"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        hexagon-2
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-primary mask-hexagon-2"
        name="InputRatingMaskExample-hexagon-2"
        type="radio"
      />
      <input
        className="mask bg-primary mask-hexagon-2"
        name="InputRatingMaskExample-hexagon-2"
        type="radio"
      />
      <input
        className="mask bg-primary mask-hexagon-2"
        name="InputRatingMaskExample-hexagon-2"
        type="radio"
      />
      <input
        className="mask bg-primary mask-hexagon-2"
        name="InputRatingMaskExample-hexagon-2"
        type="radio"
      />
      <input
        className="mask bg-primary mask-hexagon-2"
        name="InputRatingMaskExample-hexagon-2"
        type="radio"
      />
      <input
        className="mask bg-primary mask-hexagon-2"
        name="InputRatingMaskExample-hexagon-2"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        parallelogram
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-primary mask-parallelogram"
        name="InputRatingMaskExample-parallelogram"
        type="radio"
      />
      <input
        className="mask bg-primary mask-parallelogram"
        name="InputRatingMaskExample-parallelogram"
        type="radio"
      />
      <input
        className="mask bg-primary mask-parallelogram"
        name="InputRatingMaskExample-parallelogram"
        type="radio"
      />
      <input
        className="mask bg-primary mask-parallelogram"
        name="InputRatingMaskExample-parallelogram"
        type="radio"
      />
      <input
        className="mask bg-primary mask-parallelogram"
        name="InputRatingMaskExample-parallelogram"
        type="radio"
      />
      <input
        className="mask bg-primary mask-parallelogram"
        name="InputRatingMaskExample-parallelogram"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        parallelogram-2
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-primary mask-parallelogram-2"
        name="InputRatingMaskExample-parallelogram-2"
        type="radio"
      />
      <input
        className="mask bg-primary mask-parallelogram-2"
        name="InputRatingMaskExample-parallelogram-2"
        type="radio"
      />
      <input
        className="mask bg-primary mask-parallelogram-2"
        name="InputRatingMaskExample-parallelogram-2"
        type="radio"
      />
      <input
        className="mask bg-primary mask-parallelogram-2"
        name="InputRatingMaskExample-parallelogram-2"
        type="radio"
      />
      <input
        className="mask bg-primary mask-parallelogram-2"
        name="InputRatingMaskExample-parallelogram-2"
        type="radio"
      />
      <input
        className="mask bg-primary mask-parallelogram-2"
        name="InputRatingMaskExample-parallelogram-2"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        parallelogram-3
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-primary mask-parallelogram-3"
        name="InputRatingMaskExample-parallelogram-3"
        type="radio"
      />
      <input
        className="mask bg-primary mask-parallelogram-3"
        name="InputRatingMaskExample-parallelogram-3"
        type="radio"
      />
      <input
        className="mask bg-primary mask-parallelogram-3"
        name="InputRatingMaskExample-parallelogram-3"
        type="radio"
      />
      <input
        className="mask bg-primary mask-parallelogram-3"
        name="InputRatingMaskExample-parallelogram-3"
        type="radio"
      />
      <input
        className="mask bg-primary mask-parallelogram-3"
        name="InputRatingMaskExample-parallelogram-3"
        type="radio"
      />
      <input
        className="mask bg-primary mask-parallelogram-3"
        name="InputRatingMaskExample-parallelogram-3"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        parallelogram-4
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-primary mask-parallelogram-4"
        name="InputRatingMaskExample-parallelogram-4"
        type="radio"
      />
      <input
        className="mask bg-primary mask-parallelogram-4"
        name="InputRatingMaskExample-parallelogram-4"
        type="radio"
      />
      <input
        className="mask bg-primary mask-parallelogram-4"
        name="InputRatingMaskExample-parallelogram-4"
        type="radio"
      />
      <input
        className="mask bg-primary mask-parallelogram-4"
        name="InputRatingMaskExample-parallelogram-4"
        type="radio"
      />
      <input
        className="mask bg-primary mask-parallelogram-4"
        name="InputRatingMaskExample-parallelogram-4"
        type="radio"
      />
      <input
        className="mask bg-primary mask-parallelogram-4"
        name="InputRatingMaskExample-parallelogram-4"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        pentagon
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-primary mask-pentagon"
        name="InputRatingMaskExample-pentagon"
        type="radio"
      />
      <input
        className="mask bg-primary mask-pentagon"
        name="InputRatingMaskExample-pentagon"
        type="radio"
      />
      <input
        className="mask bg-primary mask-pentagon"
        name="InputRatingMaskExample-pentagon"
        type="radio"
      />
      <input
        className="mask bg-primary mask-pentagon"
        name="InputRatingMaskExample-pentagon"
        type="radio"
      />
      <input
        className="mask bg-primary mask-pentagon"
        name="InputRatingMaskExample-pentagon"
        type="radio"
      />
      <input
        className="mask bg-primary mask-pentagon"
        name="InputRatingMaskExample-pentagon"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        square
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-primary mask-square"
        name="InputRatingMaskExample-square"
        type="radio"
      />
      <input
        className="mask bg-primary mask-square"
        name="InputRatingMaskExample-square"
        type="radio"
      />
      <input
        className="mask bg-primary mask-square"
        name="InputRatingMaskExample-square"
        type="radio"
      />
      <input
        className="mask bg-primary mask-square"
        name="InputRatingMaskExample-square"
        type="radio"
      />
      <input
        className="mask bg-primary mask-square"
        name="InputRatingMaskExample-square"
        type="radio"
      />
      <input
        className="mask bg-primary mask-square"
        name="InputRatingMaskExample-square"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        squircle
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-primary mask-squircle"
        name="InputRatingMaskExample-squircle"
        type="radio"
      />
      <input
        className="mask bg-primary mask-squircle"
        name="InputRatingMaskExample-squircle"
        type="radio"
      />
      <input
        className="mask bg-primary mask-squircle"
        name="InputRatingMaskExample-squircle"
        type="radio"
      />
      <input
        className="mask bg-primary mask-squircle"
        name="InputRatingMaskExample-squircle"
        type="radio"
      />
      <input
        className="mask bg-primary mask-squircle"
        name="InputRatingMaskExample-squircle"
        type="radio"
      />
      <input
        className="mask bg-primary mask-squircle"
        name="InputRatingMaskExample-squircle"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        star
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-primary mask-star"
        name="InputRatingMaskExample-star"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingMaskExample-star"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingMaskExample-star"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingMaskExample-star"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingMaskExample-star"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingMaskExample-star"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        star-2
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-primary mask-star-2"
        name="InputRatingMaskExample-star-2"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star-2"
        name="InputRatingMaskExample-star-2"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star-2"
        name="InputRatingMaskExample-star-2"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star-2"
        name="InputRatingMaskExample-star-2"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star-2"
        name="InputRatingMaskExample-star-2"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star-2"
        name="InputRatingMaskExample-star-2"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        triangle
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-primary mask-triangle"
        name="InputRatingMaskExample-triangle"
        type="radio"
      />
      <input
        className="mask bg-primary mask-triangle"
        name="InputRatingMaskExample-triangle"
        type="radio"
      />
      <input
        className="mask bg-primary mask-triangle"
        name="InputRatingMaskExample-triangle"
        type="radio"
      />
      <input
        className="mask bg-primary mask-triangle"
        name="InputRatingMaskExample-triangle"
        type="radio"
      />
      <input
        className="mask bg-primary mask-triangle"
        name="InputRatingMaskExample-triangle"
        type="radio"
      />
      <input
        className="mask bg-primary mask-triangle"
        name="InputRatingMaskExample-triangle"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        triangle-2
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-primary mask-triangle-2"
        name="InputRatingMaskExample-triangle-2"
        type="radio"
      />
      <input
        className="mask bg-primary mask-triangle-2"
        name="InputRatingMaskExample-triangle-2"
        type="radio"
      />
      <input
        className="mask bg-primary mask-triangle-2"
        name="InputRatingMaskExample-triangle-2"
        type="radio"
      />
      <input
        className="mask bg-primary mask-triangle-2"
        name="InputRatingMaskExample-triangle-2"
        type="radio"
      />
      <input
        className="mask bg-primary mask-triangle-2"
        name="InputRatingMaskExample-triangle-2"
        type="radio"
      />
      <input
        className="mask bg-primary mask-triangle-2"
        name="InputRatingMaskExample-triangle-2"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        triangle-3
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-primary mask-triangle-3"
        name="InputRatingMaskExample-triangle-3"
        type="radio"
      />
      <input
        className="mask bg-primary mask-triangle-3"
        name="InputRatingMaskExample-triangle-3"
        type="radio"
      />
      <input
        className="mask bg-primary mask-triangle-3"
        name="InputRatingMaskExample-triangle-3"
        type="radio"
      />
      <input
        className="mask bg-primary mask-triangle-3"
        name="InputRatingMaskExample-triangle-3"
        type="radio"
      />
      <input
        className="mask bg-primary mask-triangle-3"
        name="InputRatingMaskExample-triangle-3"
        type="radio"
      />
      <input
        className="mask bg-primary mask-triangle-3"
        name="InputRatingMaskExample-triangle-3"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        triangle-4
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-primary mask-triangle-4"
        name="InputRatingMaskExample-triangle-4"
        type="radio"
      />
      <input
        className="mask bg-primary mask-triangle-4"
        name="InputRatingMaskExample-triangle-4"
        type="radio"
      />
      <input
        className="mask bg-primary mask-triangle-4"
        name="InputRatingMaskExample-triangle-4"
        type="radio"
      />
      <input
        className="mask bg-primary mask-triangle-4"
        name="InputRatingMaskExample-triangle-4"
        type="radio"
      />
      <input
        className="mask bg-primary mask-triangle-4"
        name="InputRatingMaskExample-triangle-4"
        type="radio"
      />
      <input
        className="mask bg-primary mask-triangle-4"
        name="InputRatingMaskExample-triangle-4"
        type="radio"
      />
    </div>
  </div>,
]
`;

exports[`Storyshots @mqs/react-server-components/components/Input/InputRating Input Rating Size Example 1`] = `
[
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        lg
      </span>
    </label>
    <div
      className="rating rating-lg"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-primary mask-star"
        name="InputRatingSizeExample-lg"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingSizeExample-lg"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingSizeExample-lg"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingSizeExample-lg"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingSizeExample-lg"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingSizeExample-lg"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        md
      </span>
    </label>
    <div
      className="rating rating-md"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-primary mask-star"
        name="InputRatingSizeExample-md"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingSizeExample-md"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingSizeExample-md"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingSizeExample-md"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingSizeExample-md"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingSizeExample-md"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        sm
      </span>
    </label>
    <div
      className="rating rating-sm"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-primary mask-star"
        name="InputRatingSizeExample-sm"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingSizeExample-sm"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingSizeExample-sm"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingSizeExample-sm"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingSizeExample-sm"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingSizeExample-sm"
        type="radio"
      />
    </div>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        xs
      </span>
    </label>
    <div
      className="rating rating-xs"
      data-testid="InputRating"
    >
      <input
        className="mask rating-hidden bg-primary mask-star"
        name="InputRatingSizeExample-xs"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingSizeExample-xs"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingSizeExample-xs"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingSizeExample-xs"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingSizeExample-xs"
        type="radio"
      />
      <input
        className="mask bg-primary mask-star"
        name="InputRatingSizeExample-xs"
        type="radio"
      />
    </div>
  </div>,
]
`;
